# synology_to_immich

./: .envrc  .gitignore  CLAUDE.md  README.md  config.toml.example  flake.nix  plan.md  pyproject.toml
.claude/: settings.local.json
docs/: PROGRESS.md
docs/plans/: 2026-02-05-album-verification-design.md
src/synology_to_immich/: __init__.py  __main__.py  album.py  album_verify.py  backfill.py  config.py  immich.py  live_photo.py  logging.py  migrator.py  progress.py  report.py  synology_db.py  verify.py
src/synology_to_immich/readers/: __init__.py  base.py  local.py  smb.py
tests/: __init__.py  conftest.py  test_album.py  test_album_verify.py  test_backfill.py  test_cli.py  test_config.py  test_immich.py  test_live_photo.py  test_logging.py  test_migrator.py  test_progress.py  test_readers.py  test_report.py  test_synology_db.py  test_verify.py
